yaml/demosd1/chat-ai-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-ai-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-ai-backend
  template:
    metadata:
      labels:
        app: chat-ai-backend
    spec:
      containers:
        - name: ollama-backend
          image: ollama/ollama
          command:
            - "/bin/sh"
            - "-c"
            - "set -e && ollama serve & sleep 10 && ollama run orca-mini && tail -f /dev/null"              
          ports:
            - containerPort: 11434
---
apiVersion: v1
kind: Service
metadata:
  name: chat-ai-backend-service
spec:
  selector:
    app: chat-ai-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 11434  
  type: ClusterIP
