yaml/demosd1/repository-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: repository
spec:
  replicas: 1
  selector:
    matchLabels:
      app: repository-app
  template:
    metadata:
      labels:
        app: repository-app
    spec:
      containers:
        - name: gitea
          image: gitea/gitea:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data-volume
              mountPath: /data
      volumes:
        - name: data-volume
          hostPath:
            path: /home/josan/demo7/repo-data
---
apiVersion: v1
kind: Service
metadata:
  name: repository-service
spec:
  selector:
    app: repository-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
