yaml/demosd1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: docs.josanesc.com 
    http:
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: docs-service 
            port:
              number: 80
  - host: chat-ai.josanesc.com
    http:
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: chat-ai-frontend-service 
            port:
              number: 80
  - host: repository.josanesc.com
    http:
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: repository-service
            port:
              number: 80
  - host: k8s-tfg.josanesc.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-tfg-service
            port:
              number: 80
